--- a/MainWindow.xib
+++ b/MainWindow.xib
@@ -2958,6 +2958,7 @@ AAMAAAABAAEAAAFTAAMAAAAEAAAFwgAAAAAACAAIAAgACAABAAEAAQABA</bytes>
         <object class="NSMutableArray" key="NSDeclaredKeys">
           <bool key="EncodedWithXMLCoder">YES</bool>
           <string>name</string>
+          <string>monday</string>
         </object>
         <bool key="NSEditable">YES</bool>
         <object class="_NSManagedProxy" key="_NSManagedProxy"/>
@@ -3967,6 +3968,22 @@ AAMAAAABAAEAAAFTAAMAAAAEAAAFwgAAAAAACAAIAAgACAABAAEAAQABA</bytes>
             </object>
           </object>
           <int key="connectionID">1166</int>
+        </object>
+        <object class="IBConnectionRecord">
+          <object class="IBBindingConnection" key="connection">
+            <string key="label">value: arrangedObjects.monday</string>
+            <reference key="source" ref="182743790"/>
+            <reference key="destination" ref="8272580"/>
+            <object class="NSNibBindingConnector" key="connector">
+              <reference key="NSSource" ref="182743790"/>
+              <reference key="NSDestination" ref="8272580"/>
+              <string key="NSLabel">value: arrangedObjects.monday</string>
+              <string key="NSBinding">value</string>
+              <string key="NSKeyPath">arrangedObjects.monday</string>
+              <int key="NSNibBindingConnectorVersion">2</int>
+            </object>
+          </object>
+          <int key="connectionID">1167</int>
         </object>
       </object>
       <object class="IBMutableOrderedSet" key="objectRecords">
@@ -5850,7 +5867,7 @@ AAMAAAABAAEAAAFTAAMAAAAEAAAFwgAAAAAACAAIAAgACAABAAEAAQABA</bytes>
         </object>
       </object>
       <nil key="sourceID"/>
-      <int key="maxID">1166</int>
+      <int key="maxID">1167</int>
     </object>
     <object class="IBClassDescriber" key="IBDocument.Classes">
       <object class="NSMutableArray" key="referencedPartialClassDescriptions">
